[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Fonts/GnuUnifontFull-Pm9P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Cenas/Opt_Menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/Play.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 72, 0, 24, 14 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 72, 14, 24, 13 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[node name="Opt_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 269.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -112.0
margin_top = 67.0
margin_right = 112.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 1 )
text = "OPTIONS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="HSlider" parent="."]
margin_left = 79.0
margin_top = 233.0
margin_right = 445.0
margin_bottom = 249.0
rect_pivot_offset = Vector2( -280.267, -64.8358 )
min_value = -60.0
max_value = 10.0
step = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Music"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -55.0
margin_right = 48.0
margin_bottom = -23.0
custom_fonts/font = SubResource( 2 )
text = "Music"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="HSlider" parent="."]
margin_left = 79.0
margin_top = 317.183
margin_right = 445.0
margin_bottom = 333.183
rect_pivot_offset = Vector2( -280.267, -64.8358 )
min_value = -60.0
max_value = 10.0
step = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sound"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -55.0
margin_right = 48.0
margin_bottom = -23.0
custom_fonts/font = SubResource( 2 )
text = "Sound"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit_Button" type="TouchScreenButton" parent="."]
position = Vector2( 210, 941 )
scale = Vector2( 5, 5 )
normal = SubResource( 3 )
pressed = SubResource( 4 )

[node name="CheckButton" type="CheckButton" parent="."]
margin_left = 36.0144
margin_top = 470.033
margin_right = 500.014
margin_bottom = 510.033
custom_fonts/font = SubResource( 5 )
text = "Sempre perguntar a dificuldade ao iniciar o jogo"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 161.731
margin_top = 687.52
margin_right = 379.731
margin_bottom = 709.52
custom_fonts/font = SubResource( 6 )
text = "Selecione Dificuldade"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OptionButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.641
margin_top = -62.0599
margin_right = 103.359
margin_bottom = -30.0599
custom_fonts/font = SubResource( 2 )
text = "DIFFICULTY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="Sound" to="." method="_on_Sound_value_changed"]
[connection signal="pressed" from="Exit_Button" to="." method="_on_Exit_Button_pressed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
